gcc/testsuite/g++.dg/ext/label6.C
// PR c++/32108

__label__ L; // { dg-error "not at the beginning" }
